--- a/nuget/GlobalSauce.nuspec
+++ b/nuget/GlobalSauce.nuspec
@@ -2,11 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>GlobalSauce</id>
-        <version>0.0.1</version>
+        <version>0.0.2</version>
         <title>GlobalSauce</title>
         <authors>Robin Herbots</authors>
         <owners>Robin Herbots</owners>
         <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
+        <projectUrl>https://github.com/RobinHerbots/GlobalSauce</projectUrl>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
         <description>GlobalSauce
 ===========
