--- a/nuget/GlobalSauce.nuspec
+++ b/nuget/GlobalSauce.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>GlobalSauce</id>
-        <version>0.0.3</version>
+        <version>0.0.4</version>
         <title>GlobalSauce</title>
         <authors>Robin Herbots</authors>
         <owners>Robin Herbots</owners>
@@ -23,5 +23,6 @@ Implemented as an htmlhelper extension method (ASP.NET/MVC)</summary>
     <files>
         <file src="..\GlobalSauce\bin\Release\Globalization.dll" target="lib\net\Globalization.dll" />
         <file src="..\GlobalSauce\bin\Release\GlobalSauce.dll" target="lib\net\GlobalSauce.dll" />
+        <file src="..\GlobalSauce\bin\Release\**\*.resources.dll" target ="lib/net" />
     </files>
 </package>
