--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "GlobalSauce",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Automated culture settings rendering for different javascript plugins.",
   "main": "GlobalSauce.sln",
   "scripts": {
@@ -26,10 +26,13 @@
   "homepage": "https://github.com/RobinHerbots/GlobalSauce",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-available-tasks": "^0.6.1",
     "grunt-bump": "^0.3.1",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-msbuild": "^0.3.6",
     "grunt-nuget": "^0.1.4",
     "grunt-release": "^0.12.0",
-    "grunt-shell": "^1.1.2"
+    "grunt-shell": "^1.1.2",
+    "load-grunt-tasks": "^3.4.1"
   }
 }
