add freeJqGridRenderer target

--- a/GlobalSauce/GlobalSauce.csproj
+++ b/GlobalSauce/GlobalSauce.csproj
@@ -51,6 +51,7 @@
     <Compile Include="HTMLHelperExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rendertargets\ckeditorRenderer.cs" />
+    <Compile Include="Rendertargets\freeJqGridRenderer.cs" />
     <Compile Include="Rendertargets\JqGridRenderer.cs" />
     <Compile Include="Rendertargets\JqueryGlobalizationRenderer.cs" />
     <Compile Include="Rendertargets\JqueryUIDatePickerRenderer.cs" />
